Improvement in Responsiveness of UI
With improved UI Responsiveness.

--- a/index.html
+++ b/index.html
@@ -73,13 +73,14 @@ google.maps.event.addDomListener(window, 'load', initialize);
 </head>
 <body>
 <div class="row">
-  <div class="small-12 large-3 columns page_title_box">
+  <div class="show-for-large-up large-3 columns page_title_box">
     <h1>Where is my IP address?</h1>
     <h5>by Gaurang Zalariya</h5>
-    <div id="panel">
-      <input id="latlng" type="hidden" value="40.714224,-73.961452">
-      <input type="button" class="button" value="Where am I?" onclick="codeLatLng()" style="">
-    </div>
+    <input id="latlng" type="hidden" value="40.714224,-73.961452">
+    <input type="button" class="button" value="Where am I?" onclick="codeLatLng()">
+  </div>
+  <div class="show-for-medium-down small-12 large-3 columns page_title_box" align="center" style="position:absolute; bottom:0; height:100px;">
+    <input type="button" class="button" value="Where am I?" onclick="codeLatLng()" style="margin-top:0px;">
   </div>
   <div id="map-canvas"></div>
 </div>
