--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!--
+
+You can see live demo if script here : http://cssclever.com/where-is-my-ipaddress/
+
+-->
+
 <!doctype html>
 <html class="no-js" lang="en">
 <head>
@@ -9,14 +15,12 @@
 <script src="js/modernizr.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
 <script>
-function getLocation()
-  {
   if (navigator.geolocation)
     {
     navigator.geolocation.getCurrentPosition(showPosition);
     }
-  else{x.innerHTML="Geolocation is not supported by this browser.";}
-  }
+  else{document.innerHTML="Geolocation is not supported by this browser.";}
+
 function showPosition(position)
   {
   document.getElementById("latlng").value=position.coords.latitude + 
@@ -24,7 +28,7 @@ function showPosition(position)
   var newtestlatlang = position.coords.latitude + 
   ", " + position.coords.longitude;
   }
-  getLocation()
+
 </script>
 <script type="text/javascript">
 var geocoder;
@@ -74,8 +78,8 @@ google.maps.event.addDomListener(window, 'load', initialize);
 <body>
 <div class="row">
   <div class="show-for-large-up large-3 columns page_title_box">
-    <h1>Where is my IP address?</h1>
-    <h5>by Gaurang Zalariya</h5>
+    <h1>Where is my IP <strong>address</strong>?</h1>
+    <h5>by <a href="http://cssclever.com/contact-us/">Gaurang Zalariya</a></h5>
     <input id="latlng" type="hidden" value="40.714224,-73.961452">
     <input type="button" class="button" value="Where am I?" onclick="codeLatLng()">
   </div>
